# vortexFluidSimulation

./: .gitignore  README.md  fluid.html  index.html  start.bat  style.css
.claude/: settings.local.json
js/: app3d.js  sph-gpu.js  sph.js  vortex.js
local-gpu/: CMakeLists.txt  README.md  build_and_run.bat
local-gpu/src/: app.cpp  app.h  main.cpp
local-gpu/src/render/: box_renderer.cpp  box_renderer.h  fluid_renderer.cpp  fluid_renderer.h  renderer.cpp  renderer.h
local-gpu/src/sph/: grid.cuh  params.h  sph_kernels.cuh  sph_system.cu  sph_system.h
local-gpu/src/ui/: ui.cpp  ui.h
local-gpu/src/util/: cuda_utils.cuh  gl_utils.cpp  gl_utils.h
web-sin-gpu/: README.md  index.html
web-sin-gpu/js/: app3d.js  sph-gpu.js  vortex.js
